--- a/docs/man/tut.7
+++ b/docs/man/tut.7
@@ -69,13 +69,13 @@ To change the keys look at tut(5) under the \f[I]INPUT\f[R] section.
 .PP
 \f[B]v\f[R] = view.
 In this mode you can scroll throught the text of the toot if it
-doesn\[cq]t fit the screen
+doesn\[aq]t fit the screen
 .PD 0
 .P
 .PD
 \f[B]o\f[R] = open.
 Gives you a list of all URLs in the toot.
-Opens them in your default browser, if it\[cq]s an user or tag they will
+Opens them in your default browser, if it\[aq]s an user or tag they will
 be opened in tut
 .PD 0
 .P
@@ -118,7 +118,7 @@ Compose a new toot
 Edit one of your toots
 .TP
 \f[B]:favorited\f[R]
-Lists toots you\[cq]ve favorited
+Lists toots you\[aq]ve favorited
 .TP
 \f[B]:favorites\f[R]
 Lists users that favorited the toot
@@ -159,7 +159,7 @@ Moves the window in choosen direction
 Shorter form of former command
 .TP
 \f[B]:muting\f[R]
-Lists users that you\[cq]ve muted
+Lists users that you\[aq]ve muted
 .TP
 \f[B]:newer\f[R]
 Force load newer toots in current timeline
@@ -176,7 +176,7 @@ The first integer is your windows and the other for content,
 e.g.\ :proportions 1 3
 .TP
 \f[B]:refetch\f[R]
-Refetches the current item that you\[cq]re viewing.
+Refetches the current item that you\[aq]re viewing.
 Can be used to update poll results.
 .TP
 \f[B]:saved\f[R]
@@ -192,7 +192,7 @@ You can input multiple tags if you want to show them in the same
 timeline
 .TP
 \f[B]:tags\f[R]
-List of tags that you\[cq]re following
+List of tags that you\[aq]re following
 .TP
 \f[B]:unfollow-tag\f[R] \f[I]<tag>\f[R]
 Unfollow the hashtag named <tag>, e.g.\ :unfollow-tag tut
