--- a/docs/man/tut.5
+++ b/docs/man/tut.5
@@ -40,6 +40,16 @@ The last line under each options shows the default value.
 .SH GENERAL
 .PP
 This section is [general] in your configuration file
+.SS editor
+.PP
+What editor to use.
+TUT_USE_INTERNAL will use the editor that comes with tut.
+If you want you can set this to $EDITOR to use your environment variable
+or vim if you want to specify the program directly.
+.PD 0
+.P
+.PD
+\f[B]editor\f[R]=\f[I]\[lq]TUT_USE_INTERNAL\[rq]\f[R]
 .SS confirmation
 .PP
 You need to press yes in a confirmation dialog before favoriting,
