--- a/docs/man/tut.5
+++ b/docs/man/tut.5
@@ -265,11 +265,11 @@ type=\[dq]home\[dq]
 .PD 0
 .P
 .PD
-show-boosts=true
+hide-boosts=false
 .PD 0
 .P
 .PD
-show-replies=true
+hide-replies=false
 .PP
 [general.timelines]
 .PD 0
