--- a/docs/man/tut.5
+++ b/docs/man/tut.5
@@ -1093,9 +1093,9 @@ Go to next feed
 .SS keys
 .PP
 \f[B]keys\f[R]=\f[I][\[lq]l\[rq],\[lq]L\[rq]]\f[R]
-.SS specialkeys
+.SS special-keys
 .PP
-\f[B]specialkeys\f[R]=\f[I][\[lq]Right\[rq]]\f[R]
+\f[B]special-keys\f[R]=\f[I][\[lq]Right\[rq]]\f[R]
 .SH INPUT.MAIN-PREV-PANE
 .PP
 This section is [input.main-prev-pane] in your configuration file
