--- a/docs/man/tut.5
+++ b/docs/man/tut.5
@@ -213,9 +213,13 @@ valid: true, false
 .PD 0
 .P
 .PD
-2 = Only show terminal title, and no top bar in tut.
+2 = Only show terminal title, and no top bar in tut
+.PD 0
+.P
+.PD
+3 = No terminal title and no top bar in tut.
 .PP
-valid: 0, 1, 2
+valid: 0, 1, 2, 4
 .PP
 \f[B]terminal-title\f[R]=\f[I]0\f[R]
 .SS redraw-ui
