--- a/docs/man/tut.5
+++ b/docs/man/tut.5
@@ -506,6 +506,16 @@ A shortcut to run this action with your leader-key + this shortcut.
 .SH MEDIA
 .PP
 This section is [media] in your configuration file
+.SS delete-temp-files
+.PP
+Media files will be removed directly after they\[aq]ve been opened.
+Some programs doesn\[aq]t like this, so if your media doesn\[aq]t open,
+try set this to false.
+Tut will remove all files once you close the program.
+.PD 0
+.P
+.PD
+\f[B]delete-temp-files\f[R]=\f[I]true\f[R]
 .SH MEDIA.IMAGE
 .PP
 This section is [media.image] in your configuration file
