--- a/docs/man/tut.7
+++ b/docs/man/tut.7
@@ -108,6 +108,11 @@ List all your bookmarks
 \f[B]:clear-notifications\f[R]
 Remove all of your notifications
 .TP
+\f[B]:clear-temp\f[R]
+Remove all of your media files that have been downloaded.
+Only needed if you have set delete-temp-files to false under [media] in
+your config.
+.TP
 \f[B]:close-pane\f[R]
 Closes the current pane, including all the timelines in said pane
 .TP
